--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linggle-web",
   "version": "0.1.0",
-  "homepage":"https://weichinhsu.github.io/react-implement",
+  "homepage":"https://weichinhsu.github.io/linggle-web",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
