--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linggle-web",
   "version": "0.1.0",
-  "homepage":"https://weichinhsu.github.io/linggle-web",
+  "homepage": "https://weichinhsu.github.io/linggle-web",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "dva": "^2.4.1",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
