--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "PORT=5757 react-scripts start",
+    "start": "PORT=5577 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
