--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
