--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.3.3",
     "axios": "^0.19.2",
     "dva": "^2.4.1",
+    "google-map-react": "^1.1.7",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
