--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "linggle-web",
   "version": "0.1.0",
-  "homepage": "https://weichinhsu.github.io/linggle-web",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -20,6 +19,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-markdown": "^4.3.1",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
