--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-map-react": "^1.1.7",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
+    "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
